# devops-engineer-from-scratch-project-313

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  gitignore  main.py  nginx.conf  pyproject.toml  ruff.toml  test.db
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  routers.py  services.py
tests/: test_api.py  test_main.py
