[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.1",
    "sentry-sdk>=2.63.0",
    "uvicorn>=0.49.0",
    "sqlmodel>=0.0.38",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]

